--- a/index.html
+++ b/index.html
@@ -3,133 +3,160 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>打地鼠游戏</title>
+  <title>贪吃蛇游戏</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
     }
-    .game-container {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3, 1fr);
-      gap: 10px;
-      width: 300px;
+
+    canvas {
+      background-color: #000;
+      display: block;
       margin: 20px auto;
-      position: relative;
     }
-    .hole {
-      width: 100px;
-      height: 100px;
-      background-color: #aaa;
-      border-radius: 50%;
-      position: relative;
-      overflow: hidden;
-    }
-    .mole {
-      width: 80px;
-      height: 80px;
-      background-color: #666;
-      border-radius: 50%;
-      position: absolute;
-      bottom: -80px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: none;
-    }
+
     .score {
       font-size: 24px;
-      margin-top: 20px;
-    }
-    .start-button {
-      padding: 10px 20px;
-      font-size: 18px;
-      cursor: pointer;
+      margin: 10px;
     }
   </style>
 </head>
 <body>
 
-  <h1>打地鼠游戏</h1>
-  <div class="score">
-    分数: <span id="score">0</span>
-  </div>
-  
-  <div class="game-container" id="game-container">
-    <!-- 9个洞口，每个洞口里可能会弹出地鼠 -->
-    <div class="hole" onclick="hitMole(0)">
-      <div class="mole" id="mole-0"></div>
-    </div>
-    <div class="hole" onclick="hitMole(1)">
-      <div class="mole" id="mole-1"></div>
-    </div>
-    <div class="hole" onclick="hitMole(2)">
-      <div class="mole" id="mole-2"></div>
-    </div>
-    <div class="hole" onclick="hitMole(3)">
-      <div class="mole" id="mole-3"></div>
-    </div>
-    <div class="hole" onclick="hitMole(4)">
-      <div class="mole" id="mole-4"></div>
-    </div>
-    <div class="hole" onclick="hitMole(5)">
-      <div class="mole" id="mole-5"></div>
-    </div>
-    <div class="hole" onclick="hitMole(6)">
-      <div class="mole" id="mole-6"></div>
-    </div>
-    <div class="hole" onclick="hitMole(7)">
-      <div class="mole" id="mole-7"></div>
-    </div>
-    <div class="hole" onclick="hitMole(8)">
-      <div class="mole" id="mole-8"></div>
-    </div>
-  </div>
-
-  <button class="start-button" onclick="startGame()">开始游戏</button>
+  <h1>贪吃蛇游戏</h1>
+  <div class="score">分数: <span id="score">0</span></div>
+  <canvas id="gameCanvas" width="400" height="400"></canvas>
 
   <script>
-    let score = 0;
+    const canvas = document.getElementById("gameCanvas");
+    const ctx = canvas.getContext("2d");
+
+    const gridSize = 20; // 每格大小
+    let snake = [{ x: 160, y: 160 }]; // 初始蛇的位置
+    let direction = "RIGHT"; // 初始方向
+    let food = generateFood(); // 食物位置
+    let score = 0; // 分数
     let gameInterval;
-    let moleInterval;
-    let activeMoles = [];
-
-    // 显示随机地鼠
-    function showRandomMole() {
-      const moleIndex = Math.floor(Math.random() * 9);
-      const mole = document.getElementById(`mole-${moleIndex}`);
-      if (!activeMoles.includes(moleIndex)) {
-        mole.style.display = 'block';
-        activeMoles.push(moleIndex);
-        setTimeout(() => {
-          mole.style.display = 'none';
-          activeMoles = activeMoles.filter(index => index !== moleIndex);
-        }, 1000); // 地鼠出现1秒钟
-      }
-    }
-
-    // 处理点击地鼠
-    function hitMole(index) {
-      if (activeMoles.includes(index)) {
-        score++;
-        document.getElementById("score").textContent = score;
-        const mole = document.getElementById(`mole-${index}`);
-        mole.style.display = 'none';
-        activeMoles = activeMoles.filter(i => i !== index);
-      }
-    }
 
     // 启动游戏
     function startGame() {
+      // 清空蛇和食物
+      snake = [{ x: 160, y: 160 }];
+      direction = "RIGHT";
+      food = generateFood();
       score = 0;
       document.getElementById("score").textContent = score;
-      activeMoles = [];
-      gameInterval = setInterval(showRandomMole, 1500); // 每1.5秒显示一个地鼠
-      moleInterval = setTimeout(() => {
-        clearInterval(gameInterval);
-        alert('游戏结束！');
-      }, 30000); // 30秒后结束游戏
+
+      if (gameInterval) clearInterval(gameInterval);
+      gameInterval = setInterval(updateGame, 100); // 每100毫秒更新一次
     }
+
+    // 更新游戏状态
+    function updateGame() {
+      moveSnake();
+      if (checkCollision()) {
+        gameOver();
+        return;
+      }
+      if (checkFoodCollision()) {
+        score++;
+        document.getElementById("score").textContent = score;
+        snake.push({}); // 蛇增长
+        food = generateFood(); // 重新生成食物
+      }
+      draw();
+    }
+
+    // 移动蛇
+    function moveSnake() {
+      const head = { ...snake[0] };
+
+      switch (direction) {
+        case "UP": head.y -= gridSize; break;
+        case "DOWN": head.y += gridSize; break;
+        case "LEFT": head.x -= gridSize; break;
+        case "RIGHT": head.x += gridSize; break;
+      }
+
+      snake.unshift(head); // 添加新的蛇头
+      snake.pop(); // 移除蛇尾
+    }
+
+    // 检查碰撞
+    function checkCollision() {
+      const head = snake[0];
+      // 碰到边界
+      if (head.x < 0 || head.x >= canvas.width || head.y < 0 || head.y >= canvas.height) {
+        return true;
+      }
+      // 碰到自己
+      for (let i = 1; i < snake.length; i++) {
+        if (head.x === snake[i].x && head.y === snake[i].y) {
+          return true;
+        }
+      }
+      return false;
+    }
+
+    // 检查是否吃到食物
+    function checkFoodCollision() {
+      const head = snake[0];
+      return head.x === food.x && head.y === food.y;
+    }
+
+    // 生成食物
+    function generateFood() {
+      const x = Math.floor(Math.random() * (canvas.width / gridSize)) * gridSize;
+      const y = Math.floor(Math.random() * (canvas.height / gridSize)) * gridSize;
+      return { x, y };
+    }
+
+    // 画出游戏
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      // 画蛇
+      for (let i = 0; i < snake.length; i++) {
+        ctx.fillStyle = i === 0 ? "#00FF00" : "#00CC00"; // 蛇头为绿色，身体为浅绿色
+        ctx.fillRect(snake[i].x, snake[i].y, gridSize, gridSize);
+      }
+
+      // 画食物
+      ctx.fillStyle = "#FF0000"; // 食物为红色
+      ctx.fillRect(food.x, food.y, gridSize, gridSize);
+    }
+
+    // 游戏结束
+    function gameOver() {
+      clearInterval(gameInterval);
+      alert("游戏结束！您的分数是：" + score);
+      startGame();
+    }
+
+    // 监听键盘事件
+    document.addEventListener("keydown", function(event) {
+      switch (event.key) {
+        case "ArrowUp":
+          if (direction !== "DOWN") direction = "UP";
+          break;
+        case "ArrowDown":
+          if (direction !== "UP") direction = "DOWN";
+          break;
+        case "ArrowLeft":
+          if (direction !== "RIGHT") direction = "LEFT";
+          break;
+        case "ArrowRight":
+          if (direction !== "LEFT") direction = "RIGHT";
+          break;
+      }
+    });
+
+    // 开始游戏
+    startGame();
   </script>
 
 </body>
