--- a/index.html
+++ b/index.html
@@ -3,161 +3,132 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>贪吃蛇游戏</title>
+  <title>貪食蛇遊戲</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      text-align: center;
       margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #f0f0f0;
     }
-
     canvas {
-      background-color: #000;
-      display: block;
-      margin: 20px auto;
+      border: 2px solid #000;
+      background-color: #fff;
     }
-
-    .score {
-      font-size: 24px;
-      margin: 10px;
+    .controls {
+      display: flex;
+      justify-content: space-between;
+      position: fixed;
+      bottom: 20px;
+      width: 80%;
+      max-width: 400px;
+    }
+    .button {
+      flex: 1;
+      margin: 0 10px;
+      background-color: #4caf50;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      font-size: 18px;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    }
+    .button:active {
+      background-color: #3e8e41;
     }
   </style>
 </head>
 <body>
-
-  <h1>贪吃蛇游戏</h1>
-  <div class="score">分数: <span id="score">0</span></div>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
-
+  <canvas id="gameCanvas" width="300" height="300"></canvas>
+  <div class="controls">
+    <button class="button" id="up">↑</button>
+    <button class="button" id="left">←</button>
+    <button class="button" id="right">→</button>
+    <button class="button" id="down">↓</button>
+  </div>
   <script>
-    const canvas = document.getElementById("gameCanvas");
-    const ctx = canvas.getContext("2d");
+    const canvas = document.getElementById('gameCanvas');
+    const ctx = canvas.getContext('2d');
+    const box = 20;
+    let snake = [{ x: 3 * box, y: 3 * box }];
+    let direction = 'RIGHT';
+    let food = {
+      x: Math.floor(Math.random() * (canvas.width / box)) * box,
+      y: Math.floor(Math.random() * (canvas.height / box)) * box,
+    };
 
-    const gridSize = 20; // 每格大小
-    let snake = [{ x: 160, y: 160 }]; // 初始蛇的位置
-    let direction = "RIGHT"; // 初始方向
-    let food = generateFood(); // 食物位置
-    let score = 0; // 分数
-    let gameInterval;
+    function draw() {
+      // Clear canvas
+      ctx.fillStyle = '#fff';
+      ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-    // 启动游戏
-    function startGame() {
-      // 清空蛇和食物
-      snake = [{ x: 160, y: 160 }];
-      direction = "RIGHT";
-      food = generateFood();
-      score = 0;
-      document.getElementById("score").textContent = score;
+      // Draw snake
+      snake.forEach((segment, index) => {
+        ctx.fillStyle = index === 0 ? '#000' : '#4caf50';
+        ctx.fillRect(segment.x, segment.y, box, box);
+      });
 
-      if (gameInterval) clearInterval(gameInterval);
-      gameInterval = setInterval(updateGame, 100); // 每100毫秒更新一次
-    }
+      // Draw food
+      ctx.fillStyle = 'red';
+      ctx.fillRect(food.x, food.y, box, box);
 
-    // 更新游戏状态
-    function updateGame() {
-      moveSnake();
-      if (checkCollision()) {
-        gameOver();
+      // Move snake
+      let head = { ...snake[0] };
+      if (direction === 'LEFT') head.x -= box;
+      if (direction === 'RIGHT') head.x += box;
+      if (direction === 'UP') head.y -= box;
+      if (direction === 'DOWN') head.y += box;
+
+      // Check for collisions
+      if (
+        head.x < 0 ||
+        head.x >= canvas.width ||
+        head.y < 0 ||
+        head.y >= canvas.height ||
+        snake.some(segment => segment.x === head.x && segment.y === head.y)
+      ) {
+        alert('Game Over!');
+        snake = [{ x: 3 * box, y: 3 * box }];
+        direction = 'RIGHT';
+        food = {
+          x: Math.floor(Math.random() * (canvas.width / box)) * box,
+          y: Math.floor(Math.random() * (canvas.height / box)) * box,
+        };
         return;
       }
-      if (checkFoodCollision()) {
-        score++;
-        document.getElementById("score").textContent = score;
-        snake.push({}); // 蛇增长
-        food = generateFood(); // 重新生成食物
-      }
-      draw();
-    }
 
-    // 移动蛇
-    function moveSnake() {
-      const head = { ...snake[0] };
-
-      switch (direction) {
-        case "UP": head.y -= gridSize; break;
-        case "DOWN": head.y += gridSize; break;
-        case "LEFT": head.x -= gridSize; break;
-        case "RIGHT": head.x += gridSize; break;
+      // Check if snake eats food
+      if (head.x === food.x && head.y === food.y) {
+        food = {
+          x: Math.floor(Math.random() * (canvas.width / box)) * box,
+          y: Math.floor(Math.random() * (canvas.height / box)) * box,
+        };
+      } else {
+        snake.pop();
       }
 
-      snake.unshift(head); // 添加新的蛇头
-      snake.pop(); // 移除蛇尾
+      snake.unshift(head);
     }
 
-    // 检查碰撞
-    function checkCollision() {
-      const head = snake[0];
-      // 碰到边界
-      if (head.x < 0 || head.x >= canvas.width || head.y < 0 || head.y >= canvas.height) {
-        return true;
-      }
-      // 碰到自己
-      for (let i = 1; i < snake.length; i++) {
-        if (head.x === snake[i].x && head.y === snake[i].y) {
-          return true;
-        }
-      }
-      return false;
-    }
-
-    // 检查是否吃到食物
-    function checkFoodCollision() {
-      const head = snake[0];
-      return head.x === food.x && head.y === food.y;
-    }
-
-    // 生成食物
-    function generateFood() {
-      const x = Math.floor(Math.random() * (canvas.width / gridSize)) * gridSize;
-      const y = Math.floor(Math.random() * (canvas.height / gridSize)) * gridSize;
-      return { x, y };
-    }
-
-    // 画出游戏
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // 画蛇
-      for (let i = 0; i < snake.length; i++) {
-        ctx.fillStyle = i === 0 ? "#00FF00" : "#00CC00"; // 蛇头为绿色，身体为浅绿色
-        ctx.fillRect(snake[i].x, snake[i].y, gridSize, gridSize);
-      }
-
-      // 画食物
-      ctx.fillStyle = "#FF0000"; // 食物为红色
-      ctx.fillRect(food.x, food.y, gridSize, gridSize);
-    }
-
-    // 游戏结束
-    function gameOver() {
-      clearInterval(gameInterval);
-      alert("游戏结束！您的分数是：" + score);
-      startGame();
-    }
-
-    // 监听键盘事件
-    document.addEventListener("keydown", function(event) {
-      switch (event.key) {
-        case "ArrowUp":
-          if (direction !== "DOWN") direction = "UP";
-          break;
-        case "ArrowDown":
-          if (direction !== "UP") direction = "DOWN";
-          break;
-        case "ArrowLeft":
-          if (direction !== "RIGHT") direction = "LEFT";
-          break;
-        case "ArrowRight":
-          if (direction !== "LEFT") direction = "RIGHT";
-          break;
-      }
+    // Handle controls
+    document.getElementById('up').addEventListener('click', () => {
+      if (direction !== 'DOWN') direction = 'UP';
+    });
+    document.getElementById('down').addEventListener('click', () => {
+      if (direction !== 'UP') direction = 'DOWN';
+    });
+    document.getElementById('left').addEventListener('click', () => {
+      if (direction !== 'RIGHT') direction = 'LEFT';
+    });
+    document.getElementById('right').addEventListener('click', () => {
+      if (direction !== 'LEFT') direction = 'RIGHT';
     });
 
-    // 开始游戏
-    startGame();
+    setInterval(draw, 100);
   </script>
-
 </body>
 </html>
