--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     canvas {
       border: 2px solid #000;
       background-color: #fff;
-      touch-action: none; /* 禁止瀏覽器的默認手勢行為 */
+      touch-action: none; /* 禁止瀏覽器默認的手勢行為 */
     }
   </style>
 </head>
@@ -28,14 +28,57 @@
     const box = 20;
     let snake = [{ x: 3 * box, y: 3 * box }];
     let direction = 'RIGHT';
-    let food = {
-      x: Math.floor(Math.random() * (canvas.width / box)) * box,
-      y: Math.floor(Math.random() * (canvas.height / box)) * box,
-    };
+    let food = generateFood();
+    let lastTime = 0;
+    const speed = 200; // 每200毫秒更新一次
 
     // 手勢變量
     let startX = 0, startY = 0, endX = 0, endY = 0;
 
+    // 生成食物且避開蛇身
+    function generateFood() {
+      let newFood;
+      do {
+        newFood = {
+          x: Math.floor(Math.random() * (canvas.width / box)) * box,
+          y: Math.floor(Math.random() * (canvas.height / box)) * box,
+        };
+      } while (snake.some(segment => segment.x === newFood.x && segment.y === newFood.y));
+      return newFood;
+    }
+
+    // 遊戲邏輯
+    function update() {
+      const head = { ...snake[0] };
+      if (direction === 'LEFT') head.x -= box;
+      if (direction === 'RIGHT') head.x += box;
+      if (direction === 'UP') head.y -= box;
+      if (direction === 'DOWN') head.y += box;
+
+      // 碰撞檢測
+      if (
+        head.x < 0 || head.x >= canvas.width ||
+        head.y < 0 || head.y >= canvas.height ||
+        snake.some(segment => segment.x === head.x && segment.y === head.y)
+      ) {
+        alert('遊戲結束！');
+        snake = [{ x: 3 * box, y: 3 * box }];
+        direction = 'RIGHT';
+        food = generateFood();
+        return;
+      }
+
+      // 吃食物
+      if (head.x === food.x && head.y === food.y) {
+        food = generateFood();
+      } else {
+        snake.pop();
+      }
+
+      snake.unshift(head);
+    }
+
+    // 繪圖邏輯
     function draw() {
       // 清空畫布
       ctx.fillStyle = '#fff';
@@ -50,43 +93,16 @@
       // 畫食物
       ctx.fillStyle = 'red';
       ctx.fillRect(food.x, food.y, box, box);
+    }
 
-      // 蛇移動
-      let head = { ...snake[0] };
-      if (direction === 'LEFT') head.x -= box;
-      if (direction === 'RIGHT') head.x += box;
-      if (direction === 'UP') head.y -= box;
-      if (direction === 'DOWN') head.y += box;
-
-      // 碰撞檢測
-      if (
-        head.x < 0 ||
-        head.x >= canvas.width ||
-        head.y < 0 ||
-        head.y >= canvas.height ||
-        snake.some(segment => segment.x === head.x && segment.y === head.y)
-      ) {
-        alert('遊戲結束！');
-        snake = [{ x: 3 * box, y: 3 * box }];
-        direction = 'RIGHT';
-        food = {
-          x: Math.floor(Math.random() * (canvas.width / box)) * box,
-          y: Math.floor(Math.random() * (canvas.height / box)) * box,
-        };
-        return;
+    // 遊戲循環
+    function gameLoop(timestamp) {
+      if (timestamp - lastTime >= speed) {
+        update();
+        draw();
+        lastTime = timestamp;
       }
-
-      // 吃食物
-      if (head.x === food.x && head.y === food.y) {
-        food = {
-          x: Math.floor(Math.random() * (canvas.width / box)) * box,
-          y: Math.floor(Math.random() * (canvas.height / box)) * box,
-        };
-      } else {
-        snake.pop();
-      }
-
-      snake.unshift(head);
+      requestAnimationFrame(gameLoop);
     }
 
     // 處理滑動手勢
@@ -120,7 +136,8 @@
       }
     });
 
-    setInterval(draw, 100);
+    // 啟動遊戲
+    requestAnimationFrame(gameLoop);
   </script>
 </body>
 </html>
