--- a/index.html
+++ b/index.html
@@ -16,12 +16,35 @@
     canvas {
       border: 2px solid #000;
       background-color: #fff;
-      touch-action: none; /* 禁止瀏覽器默認的手勢行為 */
+    }
+    .joystick {
+      position: fixed;
+      bottom: 30px;
+      left: 30px;
+      width: 100px;
+      height: 100px;
+      background-color: rgba(0, 0, 0, 0.2);
+      border-radius: 50%;
+      touch-action: none;
+    }
+    .joystick-handle {
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 50%;
+      top: 25px;
+      left: 25px;
+      transform: translate(0, 0);
+      transition: transform 0.1s;
     }
   </style>
 </head>
 <body>
   <canvas id="gameCanvas" width="300" height="300"></canvas>
+  <div class="joystick" id="joystick">
+    <div class="joystick-handle" id="joystickHandle"></div>
+  </div>
   <script>
     const canvas = document.getElementById('gameCanvas');
     const ctx = canvas.getContext('2d');
@@ -30,12 +53,15 @@
     let direction = 'RIGHT';
     let food = generateFood();
     let lastTime = 0;
-    const speed = 200; // 每200毫秒更新一次
+    const speed = 200;
 
-    // 手勢變量
-    let startX = 0, startY = 0, endX = 0, endY = 0;
+    // 摇桿相关变量
+    const joystick = document.getElementById('joystick');
+    const joystickHandle = document.getElementById('joystickHandle');
+    let joystickCenter = { x: joystick.offsetWidth / 2, y: joystick.offsetHeight / 2 };
+    let active = false;
 
-    // 生成食物且避開蛇身
+    // 生成食物且避开蛇身
     function generateFood() {
       let newFood;
       do {
@@ -80,22 +106,19 @@
 
     // 繪圖邏輯
     function draw() {
-      // 清空畫布
       ctx.fillStyle = '#fff';
       ctx.fillRect(0, 0, canvas.width, canvas.height);
 
-      // 畫蛇
       snake.forEach((segment, index) => {
         ctx.fillStyle = index === 0 ? '#000' : '#4caf50';
         ctx.fillRect(segment.x, segment.y, box, box);
       });
 
-      // 畫食物
       ctx.fillStyle = 'red';
       ctx.fillRect(food.x, food.y, box, box);
     }
 
-    // 遊戲循環
+    // 游戏循环
     function gameLoop(timestamp) {
       if (timestamp - lastTime >= speed) {
         update();
@@ -105,38 +128,46 @@
       requestAnimationFrame(gameLoop);
     }
 
-    // 處理滑動手勢
-    canvas.addEventListener('touchstart', e => {
-      const touch = e.touches[0];
-      startX = touch.clientX;
-      startY = touch.clientY;
+    // 摇桿邏輯
+    joystick.addEventListener('touchstart', e => {
+      active = true;
     });
 
-    canvas.addEventListener('touchend', e => {
-      const touch = e.changedTouches[0];
-      endX = touch.clientX;
-      endY = touch.clientY;
+    joystick.addEventListener('touchmove', e => {
+      if (!active) return;
 
-      const deltaX = endX - startX;
-      const deltaY = endY - startY;
+      const touch = e.touches[0];
+      const rect = joystick.getBoundingClientRect();
+      const offsetX = touch.clientX - rect.left - joystickCenter.x;
+      const offsetY = touch.clientY - rect.top - joystickCenter.y;
 
-      // 判斷滑動方向
-      if (Math.abs(deltaX) > Math.abs(deltaY)) {
-        if (deltaX > 0 && direction !== 'LEFT') {
-          direction = 'RIGHT';
-        } else if (deltaX < 0 && direction !== 'RIGHT') {
-          direction = 'LEFT';
-        }
+      const distance = Math.sqrt(offsetX ** 2 + offsetY ** 2);
+      const maxDistance = joystick.offsetWidth / 2;
+
+      // 限制摇桿手柄的移动范围
+      const normalizedX = offsetX / distance;
+      const normalizedY = offsetY / distance;
+      const clampedX = normalizedX * Math.min(distance, maxDistance);
+      const clampedY = normalizedY * Math.min(distance, maxDistance);
+
+      joystickHandle.style.transform = `translate(${clampedX}px, ${clampedY}px)`;
+
+      // 根據方向改變移動
+      if (Math.abs(offsetX) > Math.abs(offsetY)) {
+        if (offsetX > 0 && direction !== 'LEFT') direction = 'RIGHT';
+        if (offsetX < 0 && direction !== 'RIGHT') direction = 'LEFT';
       } else {
-        if (deltaY > 0 && direction !== 'UP') {
-          direction = 'DOWN';
-        } else if (deltaY < 0 && direction !== 'DOWN') {
-          direction = 'UP';
-        }
+        if (offsetY > 0 && direction !== 'UP') direction = 'DOWN';
+        if (offsetY < 0 && direction !== 'DOWN') direction = 'UP';
       }
     });
 
-    // 啟動遊戲
+    joystick.addEventListener('touchend', () => {
+      active = false;
+      joystickHandle.style.transform = `translate(0, 0)`;
+    });
+
+    // 启动游戏
     requestAnimationFrame(gameLoop);
   </script>
 </body>
