--- a/index.html
+++ b/index.html
@@ -121,12 +121,39 @@
       requestAnimationFrame(gameLoop);
     }
 
-    // 監聽鍵盤控制
-    window.addEventListener('keydown', (e) => {
-      if (e.key === 'ArrowLeft' && direction !== 'RIGHT') direction = 'LEFT';
-      if (e.key === 'ArrowRight' && direction !== 'LEFT') direction = 'RIGHT';
-      if (e.key === 'ArrowUp' && direction !== 'DOWN') direction = 'UP';
-      if (e.key === 'ArrowDown' && direction !== 'UP') direction = 'DOWN';
+    // 手指滑動控制
+    let touchStart = { x: 0, y: 0 };
+    let touchMove = { x: 0, y: 0 };
+    let swipeThreshold = 50;
+
+    canvas.addEventListener('touchstart', (e) => {
+      const touch = e.touches[0];
+      touchStart.x = touch.clientX;
+      touchStart.y = touch.clientY;
+    });
+
+    canvas.addEventListener('touchmove', (e) => {
+      const touch = e.touches[0];
+      touchMove.x = touch.clientX;
+      touchMove.y = touch.clientY;
+
+      const deltaX = touchMove.x - touchStart.x;
+      const deltaY = touchMove.y - touchStart.y;
+
+      if (Math.abs(deltaX) > Math.abs(deltaY) && Math.abs(deltaX) > swipeThreshold) {
+        if (deltaX > 0 && direction !== 'LEFT') direction = 'RIGHT';
+        if (deltaX < 0 && direction !== 'RIGHT') direction = 'LEFT';
+      } else if (Math.abs(deltaY) > Math.abs(deltaX) && Math.abs(deltaY) > swipeThreshold) {
+        if (deltaY > 0 && direction !== 'UP') direction = 'DOWN';
+        if (deltaY < 0 && direction !== 'DOWN') direction = 'UP';
+      }
+    });
+
+    canvas.addEventListener('touchend', () => {
+      touchStart.x = 0;
+      touchStart.y = 0;
+      touchMove.x = 0;
+      touchMove.y = 0;
     });
 
     // 启动游戏
