--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
       padding: 10px;
       border-radius: 5px;
     }
+    #gameOver {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 20px;
+      border-radius: 10px;
+      display: none;
+    }
+    #gameOver button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    #gameOver button:hover {
+      background-color: #45a049;
+    }
   </style>
 </head>
 <body>
@@ -48,6 +72,11 @@
   <div id="nameForm">
     <input type="text" id="playerName" placeholder="輸入你的名字" />
     <button onclick="startGame()">開始遊戲</button>
+  </div>
+
+  <div id="gameOver">
+    <p>遊戲結束！</p>
+    <button onclick="startGame()">重新開始</button>
   </div>
 
   <canvas id="gameCanvas" width="300" height="300"></canvas>
@@ -196,8 +225,12 @@
 
     // 開始遊戲
     function startGame() {
+      const gameOverScreen = document.getElementById('gameOver');
+      gameOverScreen.style.display = 'none';
+
       playerName = document.getElementById('playerName').value.trim();
       if (!playerName) return alert("請輸入名字");
+
       document.getElementById('nameForm').style.display = 'none';
       snake = [{ x: 3 * box, y: 3 * box }];
       direction = 'RIGHT';
@@ -212,11 +245,10 @@
       leaderboard.push({ name: playerName, score: score });
       localStorage.setItem('leaderboard', JSON.stringify(leaderboard));
       updateLeaderboard();
-      alert('遊戲結束！');
 
-      // 重置遊戲
-      document.getElementById('nameForm').style.display = 'block';
-      document.getElementById('playerName').value = '';
+      // 顯示遊戲結束畫面
+      const gameOverScreen = document.getElementById('gameOver');
+      gameOverScreen.style.display = 'block';
     }
 
     updateLeaderboard(); // 顯示排行榜
