--- a/index.html
+++ b/index.html
@@ -244,4 +244,16 @@
       const score = snake.length - 1;
       leaderboard.push({ name: playerName, score: score });
       leaderboard.sort((a, b) => b.score - a.score); // 排序排行榜
-      if (leaderboard.length
+      if (leaderboard.length > 5) leaderboard = leaderboard.slice(0, 5); // 只保留前5名
+      localStorage.setItem('leaderboard', JSON.stringify(leaderboard));
+      updateLeaderboard();
+
+      // 顯示遊戲結束畫面
+      const gameOverScreen = document.getElementById('gameOver');
+      gameOverScreen.style.display = 'block';
+    }
+
+    updateLeaderboard(); // 顯示排行榜
+  </script>
+</body>
+</html>
