--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       }
     }
 
-    // 蛇身顏色漸變，避免紅色
+    // 蛇身顏色漸變
     function getGradientColor(index, totalLength) {
       const ratio = index / totalLength;
       const green = Math.floor(255 * ratio);
