--- a/index.html
+++ b/index.html
@@ -63,12 +63,22 @@
     #gameOver button:hover {
       background-color: #45a049;
     }
+    #effectText {
+      position: absolute;
+      top: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 18px;
+      color: #333;
+      z-index: 10;
+    }
   </style>
 </head>
 <body>
 
   <div id="leaderboard"></div>
-  
+  <div id="effectText"></div>
+
   <div id="nameForm">
     <input type="text" id="playerName" placeholder="輸入你的名字" />
     <button onclick="startGame()">開始遊戲</button>
@@ -91,11 +101,12 @@
     let food = [];
     const numFood = 3;
     let lastTime = 0;
-    const speed = 200;
     let playerName = '';
-    const foodColors = ['#FF0000', '#FFA500', '#FFFF00'];
     let leaderboard = JSON.parse(localStorage.getItem('leaderboard')) || [];
     let isGameOver = false;
+    let effectTimeout = null;
+    let effectType = '';
+    let speed = 200;
 
     // 顯示排行榜
     function updateLeaderboard() {
@@ -113,7 +124,8 @@
         newFood = {
           x: Math.floor(Math.random() * (canvas.width / box)) * box,
           y: Math.floor(Math.random() * (canvas.height / box)) * box,
-          color: foodColors[Math.floor(Math.random() * foodColors.length)] // 隨機選擇顏色
+          color: ['#FF0000', '#FFFF00', '#0000FF'][Math.floor(Math.random() * 3)], // 隨機顏色
+          type: ['grow', 'shine', 'speed'][Math.floor(Math.random() * 3)] // 隨機特殊能力
         };
         if (!snake.some(segment => segment.x === newFood.x && segment.y === newFood.y) &&
             !food.some(f => f.x === newFood.x && f.y === newFood.y)) {
@@ -128,6 +140,18 @@
       const green = Math.floor(255 * ratio);
       const blue = Math.floor(255 * (1 - ratio));
       return `rgb(0, ${green}, ${blue})`;
+    }
+
+    // 顯示特殊能力
+    function showEffectMessage(message) {
+      const effectText = document.getElementById('effectText');
+      effectText.innerText = message;
+
+      if (effectTimeout) clearTimeout(effectTimeout);
+
+      effectTimeout = setTimeout(() => {
+        effectText.innerText = '';
+      }, 5000);
     }
 
     // 遊戲邏輯
@@ -153,6 +177,7 @@
         if (head.x === f.x && head.y === f.y) {
           food.splice(idx, 1); 
           ateFood = true;
+          handleFoodEffect(f.type); // 處理食物特殊能力
         }
       });
 
@@ -163,6 +188,23 @@
       }
 
       snake.unshift(head);
+    }
+
+    // 處理食物的特殊能力
+    function handleFoodEffect(type) {
+      if (type === 'grow') {
+        snake.push({ x: snake[snake.length - 1].x, y: snake[snake.length - 1].y }); // 增加蛇身
+        showEffectMessage('蛇變大了！');
+      } else if (type === 'shine') {
+        showEffectMessage('金光閃閃！');
+        // 金光閃閃效果可視化（在此只顯示提示）
+      } else if (type === 'speed') {
+        speed = Math.max(50, speed / 2); // 速度加倍，但不低於50ms
+        showEffectMessage('速度加倍！');
+        setTimeout(() => {
+          speed = Math.min(200, speed * 2); // 5秒後恢復正常速度
+        }, 5000);
+      }
     }
 
     // 繪圖邏輯
@@ -177,7 +219,7 @@
 
       // 繪製食物
       food.forEach(f => {
-        ctx.fillStyle = f.color; // 使用食物的固定顏色
+        ctx.fillStyle = f.color; // 使用食物的顏色
         ctx.fillRect(f.x, f.y, box, box);
       });
     }
@@ -242,7 +284,9 @@
       direction = 'RIGHT';
       food = [];
       generateFood();
-      isGameOver = false; // 重新開始時設為遊戲未結束
+      isGameOver = false;
+      speed = 200; // 重置速度
+      showEffectMessage('');
       requestAnimationFrame(gameLoop);
     }
 
